# datalize

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  example.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
src/datalize/: __init__.py
tests/: test_dataclass.py  test_datetime.py  test_enum.py  test_uuid.py
