[metadata]

[options]
setup_requires =
  setuptools_scm

[tool:pytest]
# running coverage on tests/ is a hack for when we only have a single file.
# `coverage report` didnt output a total then, and I don't want to change the
# CI file or gitlab.com parsing of output coverage for this
addopts = --junitxml=testreport.xml --cov=src/datalize --cov-config=setup.cfg --cov=tests/
junit_family=xunit2
